edited the css to resolve contrast issue both in light and dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -6,10 +6,8 @@
 }
 
 body {
-    background-color: rgb(79, 180, 119);
+    background-color: white;
     padding: 3em;
-    font-size: 14px;
-    text-align: center;
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr auto;
@@ -115,7 +113,7 @@ footer {
     font-style: normal;
     font-family: Roboto;
     color: white;
-    align-self: end;
+    text-align: center;
     font-size: xx-large;
 }
 
@@ -126,7 +124,6 @@ footer {
 }
 
 .no-bullet li {
-    text-align: left;
     margin-bottom: 10px;
 }
 
@@ -144,33 +141,45 @@ footer {
 }
 
 .event-banner h3 {
+    background-color: rgb(63, 102, 52);
     font-size: xx-large;
+    font-weight: bold;
     margin-top: 5px;
     margin-bottom: 5px;
+    font-family: Roboto;
+    text-align: center;
+    color: #fff;
 }
 
 .card-weather {
     background-color: rgb(63, 102, 52);
     padding: 40px;
     grid-column: 3/4;
+    color: white;
+
 
 }
 
 .card-weather h3 {
     font-size: xx-large;
+    font-weight: bold;
     margin-top: 5px;
-    margin-bottom: 5px;
+    text-align: center;
+    background-color: rgb(63, 102, 52);
+    color: white;
 }
 
 .card-advertisements {
-    text-align: center;
     grid-column: 1/4;
 }
 
 .card-advertisements h3 {
     font-size: xx-large;
+    text-align: center;
     margin-top: 5px;
     margin-bottom: 5px;
+    background-color: rgb(63, 102, 52);
+    color: white
 }
 
 
@@ -179,6 +188,9 @@ footer {
     padding: 40px;
     text-align: center;
     grid-column: 1/2;
+    font-size: 24px;
+    font-family: Roboto;
+    color: white;
 }
 
 .card-advertisements ul li:nth-child(2) {
@@ -186,6 +198,9 @@ footer {
     padding: 40px;
     text-align: center;
     grid-column: 2/3;
+    font-size: 24px;
+    font-family: Roboto;
+    color: white;
 }
 
 .card-advertisements ul li:nth-child(3) {
@@ -194,6 +209,9 @@ footer {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     grid-column: 3/4;
+    font-family: Roboto;
+    color: white;
+    font-size: 24px
 }
 
 
@@ -226,24 +244,30 @@ footer {
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-size: 24px;
+    font-family: Roboto;
 }
 
 
 h4 {
     text-align: left;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 30px;
 
 }
+
 
 
 .social-icons {
     display: flex;
     justify-content: flex-end;
     margin-top: 10px;
+    margin-left: auto;
 }
 
 .social-icons a {
     margin-right: 10px;
-    color: #000;
     font-size: 10px;
     text-decoration: none;
 }
@@ -259,6 +283,7 @@ h4 {
     display: inline-block;
     width: 60px;
     height: 34px;
+    margin-left: auto;
 }
 
 .switch input {
@@ -272,12 +297,16 @@ h4 {
     top: 50%;
     left: calc(100% + 10px);
     transform: translateY(-50%);
-    color: #fff;
+    color: #333;
     font-size: 20px;
+    padding: 50px;
+    font-family: Roboto;
+    margin-left: auto;
+    border-radius: 5px;
 }
 
 input:checked+.slider+.mode-text {
-    content: "Dark Mode";
+    content: #333;
     right: calc(100% +10px);
 }
 
@@ -307,6 +336,14 @@ input:checked+.slider+.mode-text {
 
 input:checked+.slider {
     background-color: #2196F3;
+}
+
+body {
+    color: #333;
+}
+
+input:checked+.slider~* {
+    color: #333;
 }
 
 input:focus+.slider {
@@ -381,7 +418,8 @@ figure {
 figcaption {
     margin-top: 5px;
     font-size: xx-large;
-    font-style: italic;
+    font-family: Roboto;
+
 }
 
 h5 {
@@ -571,7 +609,6 @@ th {
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
 }
 
 article {
